--- a/style.css
+++ b/style.css
@@ -7,46 +7,49 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0; /* Cambia el color de fondo según tus preferencias */
-  }
+    background-color: #f0f0f0;
+    font-family: 'Fira Sans Condensed', sans-serif;
+}
   
   /* Estilos para el contenedor principal */
-  div {
+div {
     text-align: center;
-  }
+}
   
-  h1 {
-    font-size: 24px; /* Tamaño del título según tus preferencias */
-  }
-  
-  /* Estilos para la imagen */
-  img {
-    max-width: 100px; /* Ajusta el tamaño de la imagen según tus preferencias */
+h1 {
+    font-size: 48px;
+    color: rgb(45, 170, 255);
+    font-weight: 700;
+}
+
+img {
+    max-width: 100px;
     height: auto;
-    vertical-align: middle; /* Alinea verticalmente la imagen con el texto */
-    margin-right: 10px; /* Espacio entre la imagen y el título */
-  }
+    vertical-align: middle; 
+    margin-right: 10px;
+}
   
   /* Estilos para el párrafo */
-  p {
-    max-width: 600px; /* Limita el ancho del párrafo según tus preferencias */
-    text-align: left; /* Alinea el texto del párrafo a la izquierda */
-    margin: 20px auto; /* Centra el párrafo horizontalmente y agrega espacio vertical */
-  }
+p {
+    max-width: 600px;
+    text-align: left; 
+    margin: 20px auto;
+    font-size: 25px;
+    font-weight: 500;
+}
   
   /* Estilos para el botón */
-  a {
+a {
     display: inline-block;
-    padding: 10px 20px; /* Tamaño del botón según tus preferencias */
-    background-color: #007bff; /* Color de fondo del botón */
-    color: #fff; /* Color del texto del botón */
+    padding: 10px 20px;
+    background-color:rgb(45, 170, 255);
+    color: #fff; 
     text-decoration: none;
-    border-radius: 5px; /* Bordes redondeados */
-    margin-top: 20px; /* Espacio entre el párrafo y el botón */
-    transition: background-color 0.3s ease; /* Transición suave en el cambio de color de fondo */
-  }
+    border-radius: 5px; 
+    margin-top: 20px;
+    transition: background-color 0.3s ease;
+}
   
-  a:hover {
-    background-color: #0056b3; /* Cambia el color de fondo al pasar el mouse sobre el botón */
-  }
-  
+a:hover {
+    background-color: #0056b3;
+}
