--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-  font-family: Arial, sans-serif;
   background-color: #f0f0f0;
   font-family: 'Fira Sans Condensed', sans-serif;
 }
@@ -23,11 +22,11 @@ h1 {
 }
 
 img {
-  max-width: 100%;
+  max-width: 600px;
   height: auto;
   vertical-align: middle;
   margin-right: 10px;
-  margin-top: 750px;
+  margin-top: 100px;
 }
   
   /* Estilos para el párrafo */
