--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 /* Estilos generales */
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   height: 100vh;
   margin: 0;
   background-color: #f0f0f0;
   font-family: 'Fira Sans Condensed', sans-serif;
+
 }
   
   /* Estilos para el contenedor principal */
@@ -24,9 +26,7 @@ h1 {
 img {
   max-width: 600px;
   height: auto;
-  vertical-align: middle;
-  margin-right: 10px;
-  margin-top: 100px;
+
 }
   
   /* Estilos para el párrafo */
