--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ h1 {
 }
 
 img {
-  max-width: 600px;
+  max-width: 100%;
   height: auto;
 
 }
   
   /* Estilos para el párrafo */
 p {
-    max-width: 600px;
+    max-width: 100%;
     text-align: left; 
     margin: 20px auto;
     font-size: 25px;
@@ -53,4 +53,24 @@ a {
   
 a:hover {
     background-color: #0056b3;
+}
+
+/* Media query para celulares */
+@media (max-width: 576px) {
+  h1 {
+    font-size: 36px;
+  }
+  p {
+    font-size: 18px;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 577px) and (max-width: 768px) {
+  h1 {
+    font-size: 42px;
+  }
+  p {
+    font-size: 20px;
+  }
 }
