--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ img {
   /* Estilos para el párrafo */
 p {
     max-width: 100%;
-    text-align: left; 
+    text-align: justify;
+    text-justify: inter-word;
     margin: 20px auto;
     font-size: 25px;
     font-weight: 500;
@@ -45,7 +46,7 @@ a {
     background-color:rgb(45, 170, 255);
     color: #fff;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 8px;
     margin-top: 20px;
     transition: background-color 0.3s ease;
     margin: 10px;
@@ -57,6 +58,12 @@ a:hover {
 
 /* Media query para celulares */
 @media (max-width: 576px) {
+  body {
+    width:85%;
+    left: 40%;
+    transform: translate(-40%, -50%);
+    -ms-transform: translate(-40%, -50%);
+  }
   h1 {
     font-size: 36px;
   }
@@ -67,6 +74,24 @@ a:hover {
 
 /* Media query para tablets */
 @media (min-width: 577px) and (max-width: 768px) {
+  body {
+    width:85%;
+    left: 40%;
+    transform: translate(-40%, -50%);
+    -ms-transform: translate(-40%, -50%);
+  }
+  h1 {
+    font-size: 42px;
+  }
+  p {
+    font-size: 20px;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 769px) and (max-width: 1024px) {
+  body {
+  }
   h1 {
     font-size: 42px;
   }
