add bottom padding to body and add new page

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background-color: #f0f0f0;
   font-family: 'Fira Sans Condensed', sans-serif;
-
+  padding: bottom 48px;
 }
   
   /* Estilos para el contenedor principal */
